<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_scan_flash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_scan_flash"/>

        <Button
            android:id="@+id/btn_scan_ISBN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_scan_ISBN"/>

        <Button
            android:id="@+id/btn_scan_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_scan_gallery"/>

    </LinearLayout>

</LinearLayout>